--- a/working-backwards-assistant/package.json
+++ b/working-backwards-assistant/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-markdown": "^10.0.0",
     "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
