--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd working-backwards-assistant && npm install && npm run build",
+  "buildCommand": "cd working-backwards-assistant && npm install && CI=false npm run build",
   "outputDirectory": "working-backwards-assistant/build",
   "installCommand": "cd working-backwards-assistant && npm install",
   "framework": "create-react-app",
