--- a/working-backwards-assistant/package.json
+++ b/working-backwards-assistant/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.13.0",
     "http-proxy-middleware": "^2.0.6",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.35.0",
