--- a/working-backwards-assistant/package.json
+++ b/working-backwards-assistant/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/firebase": "^2.4.32",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
     "@types/react": "^18.3.18",
@@ -19,6 +20,7 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.13.0",
