--- a/working-backwards-assistant/package.json
+++ b/working-backwards-assistant/package.json
@@ -43,7 +43,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI=false react-scripts build",
-    "vercel-build": "cd working-backwards-assistant && npm install && npm run build",
+    "vercel-build": "npm install && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node server.js",
