--- a/working-backwards-assistant/package.json
+++ b/working-backwards-assistant/package.json
@@ -25,10 +25,12 @@
     "express": "^4.19.2",
     "firebase": "^10.13.0",
     "http-proxy-middleware": "^2.0.6",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.35.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.0.0",
     "react-quill": "^2.0.0",
     "react-quill-new": "^3.3.3",
@@ -37,7 +39,7 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
     "typescript": "^4.9.5",
-    "uuid": "^11.1.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -68,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "concurrently": "^9.1.2"
   }
 }
