--- a/working-backwards-assistant/vercel.json
+++ b/working-backwards-assistant/vercel.json
@@ -2,6 +2,12 @@
   "version": 2,
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "build",
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    }
+  ],
   "routes": [
     {
       "src": "/static/(.*)",
